made color change function

--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
   </head>
   <body>
     <div id="chart">This will be a chart.</div>
+    <div class="controller">
+      <div>
+        <label for="line">Line Color</label>
+        <input type="color" class="controller__line" id="line" />
+      </div>
+      <div>
+        <label for="inner">Inner Color</label>
+        <input type="color" class="controller__inner" id="inner" />
+      </div>
+    </div>
   </body>
 </html>
